[package]
name = "cheese_wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
diesel = { version = "2.0.3", features = ["r2d2"] }
hyper = { version = "0.14.24", features = ["full"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.3.0", features = ["serde", "fast-rng", "v4"] }
